--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-    ext.kotlin_version = "1.4.10"
+
     repositories {
         google()
         jcenter()
+        maven { url = uri("https://jitpack.io") }
     }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+
+        classpath(Dependencies.classPathGradle)
+        classpath(Dependencies.classPathKotlin)
+
     }
 }
 
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url = uri("https://jitpack.io") }
     }
 }
 
